--- a/app/src/main/res/layout/choice.xml
+++ b/app/src/main/res/layout/choice.xml
@@ -25,88 +25,96 @@
 
     </TextView>
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
 
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="week"
-        android:textColor="@color/black"
-        android:textSize="25sp"
-        app:layout_constraintEnd_toEndOf="@+id/buttonWeek"
-        app:layout_constraintHorizontal_bias="0.357"
-        app:layout_constraintStart_toStartOf="@+id/buttonWeek"
-        app:layout_constraintTop_toBottomOf="@+id/buttonWeek"></TextView>
-
-    <TextView
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="month"
-        android:textColor="@color/black"
-        android:textSize="25sp"
-        app:layout_constraintEnd_toEndOf="@+id/buttonMonth"
-        app:layout_constraintHorizontal_bias="0.607"
-        app:layout_constraintStart_toStartOf="@+id/buttonMonth"
-        app:layout_constraintTop_toTopOf="@+id/textView2">
-
-    </TextView>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-
-        android:text="year"
-        android:textColor="@color/black"
-        android:textSize="25sp"
-        app:layout_constraintEnd_toEndOf="@+id/buttonYear"
-        app:layout_constraintHorizontal_bias="0.698"
-        app:layout_constraintStart_toStartOf="@+id/buttonYear"
-        app:layout_constraintTop_toTopOf="@+id/textView2"/>
-
-
-    <Button
-        android:id="@+id/buttonWeek"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="76dp"
-        android:background="@drawable/button"
-        android:text="W"
-        android:textColor="@color/black"
-        android:textSize="45sp"
+        android:layout_marginTop="68dp"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3"/>
+        app:layout_constraintTop_toBottomOf="@+id/textView3">
 
-    <Button
-        android:id="@+id/buttonMonth"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="4dp"
-        android:background="@drawable/button"
-        android:text="M"
-        android:textColor="@color/black"
-        android:textSize="45sp"
-        app:layout_constraintStart_toEndOf="@+id/buttonWeek"
-        app:layout_constraintTop_toTopOf="@+id/buttonWeek"/>
+        <Button
+            android:id="@+id/buttonWeek"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
+            android:background="@drawable/button"
+            android:text="W"
+            android:textColor="@color/black"
+            android:textSize="45sp"
+            app:layout_constraintHorizontal_weight="1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/buttonYear"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        <Button
+            android:id="@+id/buttonMonth"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="4dp"
+            android:background="@drawable/button"
+            android:text="M"
+            android:textColor="@color/black"
+            android:textSize="45sp"
+            app:layout_constraintHorizontal_weight="1"
+            app:layout_constraintStart_toEndOf="@+id/buttonWeek"
+            app:layout_constraintTop_toTopOf="@+id/buttonWeek" />
 
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="4dp"
-        android:background="@drawable/button"
-        android:text="Y"
-        android:textColor="@color/black"
-        android:textSize="45sp"
-        app:layout_constraintStart_toEndOf="@+id/buttonMonth"
-        app:layout_constraintTop_toTopOf="@+id/buttonWeek"/>
+        <Button
+            android:id="@+id/buttonYear"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="4dp"
+            android:background="@drawable/button"
+            android:text="Y"
+            android:textColor="@color/black"
+            android:textSize="45sp"
+            app:layout_constraintHorizontal_weight="1"
+            app:layout_constraintStart_toEndOf="@+id/buttonMonth"
+            app:layout_constraintTop_toTopOf="@+id/buttonWeek" />
 
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
 
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="week"
+            android:textColor="@color/black"
+            android:textSize="25sp"
+            app:layout_constraintEnd_toEndOf="@+id/buttonWeek"
+            app:layout_constraintHorizontal_bias="0.357"
+            app:layout_constraintStart_toStartOf="@+id/buttonWeek"
+            app:layout_constraintTop_toBottomOf="@+id/buttonWeek"></TextView>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="month"
+            android:textColor="@color/black"
+            android:textSize="25sp"
+            app:layout_constraintEnd_toEndOf="@+id/buttonMonth"
+            app:layout_constraintHorizontal_bias="0.607"
+            app:layout_constraintStart_toStartOf="@+id/buttonMonth"
+            app:layout_constraintTop_toTopOf="@+id/textView2">
+
+        </TextView>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:text="year"
+            android:textColor="@color/black"
+            android:textSize="25sp"
+            app:layout_constraintEnd_toEndOf="@+id/buttonYear"
+            app:layout_constraintHorizontal_bias="0.528"
+            app:layout_constraintStart_toStartOf="@+id/buttonYear"
+            app:layout_constraintTop_toTopOf="@+id/textView2" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
