完善了动态添加textview的拖动 隐藏 初步写了 textview的字体设置界面 用到了别人的色板图

--- a/app/src/main/res/layout/bottom_nav.xml
+++ b/app/src/main/res/layout/bottom_nav.xml
@@ -20,6 +20,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <Button
+        android:id="@+id/textStyle_choose"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="148dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:layout_width="100dp"
         android:layout_height="wrap_content"
@@ -52,6 +61,5 @@
         android:src="@drawable/text_add"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
